# neuroexapt

./: .gitignore  ACCURACY_BREAKTHROUGH_ANALYSIS.md  ADVANCED_MORPHOGENESIS_ACHIEVEMENT.md  AGGRESSIVE_MORPHOGENESIS_GUIDE.md  ARCHITECTURE_COMPONENTS_AUDIT.md  ARCHITECTURE_COMPONENTS_FIX_SUMMARY.md  ARCHITECTURE_TRACKING.md  ARCHITECTURE_TRACKING_SOLUTION.md  ASO_SE_Architecture_Cleanup_Summary.md  ASO_SE_Architecture_Search_Fix_Analysis.md  ASO_SE_FIXES_AND_IMPROVEMENTS.md  ASO_SE_Framework_Analysis_and_Innovation.md  ASO_SE_Framework_Complete_Analysis_and_Solutions.md  ASO_SE_Framework_Restructure_Summary.md  ASO_SE_OPTIMIZATION_SUMMARY.md  ASO_SE_PERFORMANCE_OPTIMIZATION_REPORT.md  BATCH_SIZE_OPTIMIZATION.md  BAYESIAN_INFERENCE_ENHANCEMENT.md  BRANCH_MERGE_STRATEGY.md  CHANGELOG.md  CODE_REVIEW_RESOLUTION_SUMMARY.md  CUDA_ERROR_FIX_GUIDE.md  Critical_Fixes_Applied.md  Critical_Performance_Fix_Summary.md  DEBUG_GUIDE.md  DEVICE_FIX_SUMMARY.md  DEVICE_ISSUE_FIX_REPORT.md  DEVICE_PLACEMENT_FIXES.md  DNM_Battle_Plan.md  DNM_Channel_Mismatch_Fix_Report.md  DNM_DEVICE_FIXES.md  DNM_Enhancement_Summary.md  DNM_FIXES_APPLIED.md  DNM_FRAMEWORK_RECONSTRUCTION.md  DNM_Framework_Analysis_and_Solutions.md  DNM_Framework_Integration_Guide.md  DNM_Framework_Summary.md  DNM_INTELLIGENT_LAYER_TARGETING.md  DOCUMENTATION_SYSTEM_SETUP.md  DOCUMENTATION_VALIDATION_FIX_SUMMARY.md  (+115 more)
benchmarks/: benchmark_compile.py  benchmark_softmax_sum.py
doc/: triton_performance_test_report.md
docs/: Doxyfile  DoxygenLayout.xml  README.md  build.sh  core_features.md  dnm_principles.md  footer.html  (+12 more)
(+503 files in other folders)
